# loam

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
docs/: agent_dev_guide.md  architecture.md  cli_reference.md  getting_started.md  quickstart.md
examples/: readme.md
examples/ari/: ari_agent.py
examples/rust/echo_agent/: Cargo.toml
examples/rust/echo_agent/src/: main.rs
examples/sdk/: myagent.py
src/loam/: __init__.py
src/loam/backends/llm/: base.py  copilot_client.py  github_copilot  ollama.py  openai.py
src/loam/backends/tools/: __init__.py  artifact.py  (+4 more)
src/loam/chronicle/: chronicle.py  emitter.py  verify.py
src/loam/cli/: __init__.py  exec.py  identity.py  logs.py  main.py  ops.py  run.py  secrets.py  session.py  state.py
src/loam/continuity/: __init__.py  append.py  hash.py  verify.py  witness.py
src/loam/crypto/: canonical.py  crypto.py  sealed.py  signing.py
src/loam/identity/: dossier.py  folder_verifier.py  identity_fingerprint.py  issue.py  keypair.py  keysources.py  master_key.py  metadata.py  mutations.py  namespace.py  paths.py  revocation.py  secret_key.py  secrets.py  stores.py  toml_loader.py  transfer.py
src/loam/runtime/: agent_runtime.py  ari.py  exec_runtime.py  id_runtime.py  legacy_shim.py  llm_loader.py  protocol.py  simulation_runtime.py
src/loam/sdk/: agent.py  ari_helpers.py  context.py  secret.py
src/loam/substrate/: artifacts.py  attest_chronicle.py  config.py  message.py  signer.py  signer_factory.py  simulation_envelope.py  state_hashing.py  trust.py
(+8 files in other folders)
