[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "loam"
version = "0.1.0"
description = "Loam substrate"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "tomli_w",
    "cryptography",
]

[project.scripts]
loam = "loam.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
loam = ["runtime/driver/libloam_driver.so"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["loam*"]

